# astra-guardrails

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  VSCODE_SETUP.md  backlog_manifest.json  labels.json  milestones.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  pilot.yml
.github/workflows/: ci.yml  vscode_vsix.yml
astra/: __init__.py  cli.py  engine.py
astra/schema/: __init__.py  astra.schema.v1.json
astra/tools/: __init__.py  codegen_py.py  effects.py  fmt.py  jsonpos.py  llm_providers.py  lsp_server.py  pointer.py  pretty.py  propcheck.py  repair_loop.py  repair_suggest.py  resolve.py  runtime_guarded.py  sandbox_ast.py  sandbox_exec_py.py  semantic.py  test_runner.py  typecheck.py
backlog_issues/: 01_publish_policy_templates_astra_init_guardrails.md  02_official_policy_pack_tool_allowlist_budget_gate.md  03_vs_code_extension_packaging_thin_client.md  04_reason_codes_convention_linting.md  05_python_drop_in_middleware_for_fastapi.md  06_docs_threat_model_non_goals.md  07_ci_windows_linux_matrix_demo_tests.md  08_schema_migration_tool_astra_migrate.md  09_property_based_generators_for_guardrails_inputs.md  10_public_launch_checklist_governance.md
examples/guardrails/: 01_policy_broken.astra.json  02_policy_ok.astra.json
scripts/: create_backlog_issues.ps1  create_labels.ps1
vscode-extension/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  RELEASE.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
